test/valid/58185_while_loops/while_loops.agu
-- Author: Eduardo Santos, 58185
-- Test of nested while loops

let printPattern (n) : Int -> Unit =
    let i : Int = 0 ;
    while i < n do (
        let j : Int = 0 ;
        while j <= i do (
           print(5) ;
            set j = j + 1
        ) ;
        print(0) ;
        set i = i + 1
    )

let main (_) : Unit -> Unit = printPattern(5)