test/invalid-semantic/58185_undeclared_variable/undeclared_variable.agu
-- Author: Eduardo Santos, 58185
-- Semantic error: undeclared variable "n"

let main : Unit = 
    let x : Int = 1 ;
    print(x + n)